--- a/gameover.html
+++ b/gameover.html
@@ -12,8 +12,8 @@
 <div class="jumbotron" style="margin-top: 200px; background-color: rgba(0, 0, 0, 0)">
   <h1>Game Over</h1>
   <p>Thank you for playing our demo for GitHub's November 2016 GameOff</p>
-  <a class="btn btn-primary btn-lg" href="#" role="button">On GitHub</a>
-  <a class="btn btn-primary btn-lg" href="/" role="button">Play Again</a>
+  <a class="btn btn-primary btn-lg" href="https://github.com/joshuashoemaker/game-off-2016" role="button">On GitHub</a>
+  <a class="btn btn-primary btn-lg" href="https://joshuashoemaker.github.io/game-off-2016" role="button">Play Again</a>
   <br>
   <p>Programmer: Joshua Shoemaker <a href="https://www.twitter.com/JShoemakerDev">@JShoemakerDev</a></p>
   <p>Artist: Travis Gatlin <a href="https://www.twitter.com/TTS_Travis">@TTS_Travis</a></p>
